update after adding first analysis

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,4 +8,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+Analyses of Angelo's experiments (with Sander van der Linden), September-October 2019
+
+
+Click [here](angelo1.html) for first part
