--- a/analysis/recovery.Rmd
+++ b/analysis/recovery.Rmd
@@ -5,6 +5,7 @@ date: "2019-10-23"
 output: workflowr::wflow_html
 editor_options:
   chunk_output_type: console
+  code_folding: show
 ---
 
 ## Recover simulated data using single-indicator latent-variable model
