--- a/analysis/recovery.Rmd
+++ b/analysis/recovery.Rmd
@@ -5,7 +5,8 @@ date: "2019-10-23"
 output: workflowr::wflow_html
 editor_options:
   chunk_output_type: console
-  code_folding: hide
+  toc: false
+  code_folding: show
 ---
 
 ## Recover simulated data using single-indicator latent-variable model
