--- a/analysis/angelo2.Rmd
+++ b/analysis/angelo2.Rmd
@@ -57,7 +57,7 @@ angelo2 <- angelo2 %>% filter(Control==1)
 ```
 
 
-## Reverse scoring
+## Correlations before reverse scoring and then reverse score
 ```{r reverse, echo=TRUE, warning=FALSE, message=FALSE, results="hide"}
 itemclusters  <- c("PSEUDO", "PITS.PSEUDO", "IAS.PSEUDO", "GIS.PSEUDO", "SDQ.PSEUDO")
 likert        <- c(5,5,4,6,7) #likert scales (for reverse scoring)
@@ -79,13 +79,18 @@ sapply(itemclusters,FUN=function(cluster) {
 ## Basic summaries
 ```{r summaries, echo=TRUE}
 descr(angelo2r)
+```
 
-# correlations after reverse scoring
+## Correlations after reverse scoring
+```{r corrs2, echo=TRUE}
 sapply(itemclusters,FUN=function(cluster) {
   angelo2r %>% select(starts_with(cluster)) %>% cor 
 })
+```
 
-# look at reliabilities
+## Look at reliabilities
+```{r alpha, echo=TRUE}
+
 sapply(itemclusters,FUN=function(cluster) {
   angelo2r %>% select(starts_with(cluster)) %>% psych::alpha(.) %>% print
 })
