--- a/analysis/angelo2.Rmd
+++ b/analysis/angelo2.Rmd
@@ -37,6 +37,7 @@ library(summarytools) #contains descr()
 library(workflowr)
 
 source("analysis/funcs.r")
+source("analysis/twolines.r")
 
 revscore <- function (x,cluster) {  #this reverse scores a scale for items of reversed polarity
   return ((likert[cluster]+1)-x)            
@@ -175,4 +176,12 @@ splom(angelocomps %>% select(-c(Age:starts_with("Political"))),
             panel.loess(x, y, ..., col = 'red',lwd=2)
       },varname.cex=0.7)
 ```  
+
+## Look at correlations retaining only the 'skeptics' (i.e., PSEUDO <= 2.5)
+```{r compositescorskeptics, echo=TRUE}
+
+cor(angelocomps %>% select(-c(Age:starts_with("Political"))) %>% filter(PSEUDO <= 2.5) )
+
+``` 
+
 
