--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -19,7 +19,7 @@ Click [here](recovery.html) for simulation of single-indicator models
 
 ```{r workflowr steps, echo=FALSE,warning=FALSE, message=FALSE, results="hide"}
 #wflow_build() --alternative to knit button (but it cleans environment, hence preferable)
-#wflow_publish(c("analysis/index.Rmd", "analysis/recovery.Rmd", "analysis/angelo1.Rmd", "analysis/angelo2.Rmd"),"Exploring nonlinearities in Angelo 2")
+#wflow_publish(c("analysis/index.Rmd", "analysis/recovery.Rmd", "analysis/angelo1.Rmd", "analysis/angelo2.Rmd"),"Mediation model for Angelo 2")
 #wflow_git_push(username="StephanLewandowsky")
 
 ```
